# boringos

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  bochs.conf  boringos.code-workspace  gdb.sh  look_adr.sh  script.gdb  x86_64-boringos.json  x86_64-boringosbase.json  x86_64-boringoscore.json
.cargo/: config
bos_emulator/: .gitignore  Cargo.toml  README.md  build.rs
bos_emulator/.cargo/: config
bos_emulator/src/: main.rs  process.rs
kernel/: Cargo.toml  script.gdb
kernel/src/: main.rs
kernel/src/bindriver/cpu/: gdt.rs  idt.rs  mod.rs  pic.rs  rng.rs
kernel/src/bindriver/qemu/: mod.rs
kernel/src/bindriver/serial/: mod.rs
kernel/src/common/: eternalptr.rs  kabm.rs  kheap.rs  kput.rs  mod.rs
kernel/src/common/init/: memory.rs  mod.rs
kernel/src/inc/: mod.rs
kernel/src/process_environment/: mod.rs
kernel/src/process_manager/: handles.rs  state.rs
kernel/src/test/: pagemap_ng.rs
kernel/src/vmem/: faulth.rs  mapper.rs  mod.rs  pagelist.rs
kernel/src/vmem/pagelist/: pagelist_ng.rs
pid0/: Cargo.toml  x86_64-boringosbase.json
pid0/src/: main.rs
ralloc_shim/: Cargo.toml
ralloc_shim/src/: config.rs  lib.rs  syscalls.rs  thread_destructor.rs
sirfs/: Cargo.toml
sirfs/src/: lib.rs  tests.rs
src/: main.rs  version.rs
src/bindriver/: mod.rs
src/bindriver/cio/: mod.rs
src/bindriver/cpu/: gdt.rs  idt.rs  mod.rs  pic.rs  qemu.rs  rng.rs
src/bindriver/qemu/: mod.rs
src/bindriver/serial/: mod.rs
src/bindriver/vga_buffer/: buffer.rs  helper.rs  mod.rs
src/common/: katomic.rs  kheap.rs  kinfo.rs  macros.rs  mod.rs
src/common/init/: memory.rs
src/incproc/: mod.rs  pid0.rs  pvfs.rs  pvfs_tar.rs  rng.rs  time.rs
src/process_environment/: kcalls.rs  mod.rs
src/process_manager/: handles.rs  memory.rs  mod.rs  process.rs  stack.rs  state.rs  task.rs
src/process_manager/state/: elf.rs  gs.rs
src/test/: mod.rs
src/vmem/: bmfa.rs  faulth.rs  fmem.rs  malloc.rs  mapper.rs  mod.rs  pagelist.rs  pagetable.rs  slab.rs
src/vmem/pagelist/: pagelist_ng.rs  pagelist_og.rs
symrfp/: Cargo.toml
symrfp/src/: lib.rs
symrfp/symrfp_macros/: Cargo.toml
symrfp/symrfp_macros/src/: lib.rs
