[package]
name = "boringos"
version = "0.1.1"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2018"
publish = false

[dependencies]
bootloader = { version = "^0.8", features = ["map_physical_memory"]}
spin = "^0.5"
uart_16550 = "^0.2"
x86_64 = "^0.7"
linked_list_allocator = "^0.6"
static_assertions = "^0.3"
bitflags = "^1.0"
raw-cpuid = "6.0.0"
pic8259_simple = "0.1.1"
atomic = {version = "^0.4", features = ["nightly"]}
log = "0.4.6"
volatile = "0.2.6"

[dependencies.goblin]
version = "0.0.24"
default_features = false
features = ["elf64", "elf32", "endian_fd"]

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.symrfp]
path = "./symrfp"

[features]
default = []

[profile.dev]
opt-level = 3
codegen-units = 16

[patch.crates-io]
x86_64 = { git = "https://github.com/rust-osdev/x86_64.git", branch = "remove-ux" }