[package]
name = "pid0"
version = "0.1.0"
authors = ["Tim Schuster <mail@timschuster.info>"]
edition = "2018"

[dependencies]
uart_16550 = "0.1.0"

[dependencies.symrfp]
path = "../symrfp"

#[dependencies.log]
#version = "0.4.5"

[dependencies.ralloc]
git = "https://github.com/redox-os/ralloc.git"
default-features = false

[patch.'https://github.com/redox-os/ralloc.git']
ralloc_shim = { path = "../ralloc_shim" }